@@ -78,9 +78,9 @@ session_cookiesecure       = 0
 ; Auth Methods 
 ; This defines which auth methods vauth will attempt
 ; to use and in which order, if auto_create isn't enabled
-; The user must exist locally as well
+; The user must exist locally. Local method uses PHP's PAM Auth module
 ; DEFAULT: mysql
-; VALUES: mysql,ldap,http
+; VALUES: mysql,ldap,http, local
 auth_methods = "mysql"
 
 ;#####################
