@@ -57,7 +57,6 @@
 	<th><?php echo _('End Address'); ?></th>
 	<th><?php echo _('Level'); ?></th>
 	<th><?php echo _('User'); ?></th>
-	<th><?php echo _('Key'); ?></th>
 	<th><?php echo _('Type'); ?></th>
 	<th><?php echo _('Action'); ?></th>
 </tr>
@@ -73,11 +72,10 @@
 	<td><?php echo $access->f_end; ?></td>
 	<td><?php echo $access->f_level; ?></td>
 	<td><?php echo $access->f_user; ?></td>
-	<td><?php echo $access->key; ?></td>
 	<td><?php echo $access->f_type; ?></td>
 	<td>
 		<a href="<?php echo Config::get('web_path'); ?>/admin/access.php?action=show_edit_record&amp;access_id=<?php echo scrub_out($access->id); ?>"><?php echo get_user_icon('edit', _('Edit')); ?></a>
-		<a href="<?php echo Config::get('web_path'); ?>/admin/access.php?action=delete_record&amp;access_id=<?php echo scrub_out($access->id); ?>"><?php echo get_user_icon('delete', _('Delete')); ?></a>
+		<a href="<?php echo Config::get('web_path'); ?>/admin/access.php?action=show_delete_record&amp;access_id=<?php echo scrub_out($access->id); ?>"><?php echo get_user_icon('delete', _('Delete')); ?></a>
 	</td>
 </tr>
 	<?php  } // end foreach ?>
